fix footer contacts on tablet

--- a/src/css/modal-login-register.css
+++ b/src/css/modal-login-register.css
@@ -205,14 +205,12 @@ input[type="password"] {
 }
 
 @media (max-width: 480px){
-  .modal-header {
-  } 
   .modal-header .login-btn,
   .modal-header .registration-btn {
     padding: 15px;
   }
   .modal-log-reg-container {
-    margin: 0 20px;
+    margin: 0 10px;
   }
   .form-container {
     padding: 50px 30px;
